# tzq-sbi-phy

./: .gitignore  README.md  requirements.txt
conf/experiment_so_cht/: benchmarks.yml  dag.conf  dag.yml  observables.yml
conf/experiment_so_cht/observables.d/: particles.yml
conf/experiment_so_cht_ctw_ctb/: benchmarks.yml  dag.yml
conf/experiment_so_cht_ctw_ctb/observables.d/: features.yml
madminer-cli/: pyproject.toml  requirements.txt
madminer-cli/src/madminer_cli/: __main__.py  base.py  combine_and_shuffle.py  parse_funs.py
madminer-dag/: madminer-dag  pyproject.toml
madminer-dag/src/madminer_dag/: __main__.py  dag.py  node_parser.py  parse_args.py  parse_utils.py  ph_dag.py  schemas.py
scripts/: POST_prepare_generation  PRE_run_augmentation  PRE_run_setup  TODO  prepare_generation  run_analysis  run_augmentation  run_delphes  run_generation  run_setup
scripts/_py/: POST_prepare_generation.py
src/madminer_cli/: __init__.py  __main__.py  decorators.py  parse_args.py  parse_cls.py  runner.py  schemas.py  utils.py
src/madminer_dag/: __main__.py  node.py  run.py  utils.py
submit/: prepare_generation.sub  run_analysis.sub  run_augmentation.sub  run_delphes.sub  run_generation.sub  run_setup.sub
