[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "madminer_dag"
version = "0.1.0"
authors = [{ name = "Arturo Abril", email = "arturoabrilm@gmail.com" }]
description = "DAG workflow for MadMiner"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src" }]
